2009-09-01  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.99

	* src/home/hd-render-manager.[ch], src/mb/hd-comp-mgr.c: Add a new
	HDRM state HDRM_STATE_NON_COMP_PORT for non-composited portrait
	applications.
	Fixes: NB#135261 - Switching to portrait mode does not work in MicroB

2009-09-01  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	reverting NB#134557

2009-08-31  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.98

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_map_notify): Show menus and HSM
	unredirected if we're in the non-composited mode.

2009-08-31  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.c:
	  Begin to rotate when we get a MBWindowManagerSignalPortraitForecast.
	* src/util/hd-transition.c:
	  Don't spin the main-main loop until the FADE_OUT phase of the
	  rotation transition is over.
	* data/transitions.ini:
	  Changed damage_timeout to 120.

	svn up clutter libmatchbox

2009-08-29  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_map_notify): Do not switch away
	from non-composited mode if a mere banner is mapped.

2009-08-28  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.97

	* src/home/hd-render-manager.c (hd_render_manager_set_state): Redirect
	all unredirected clients.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_unredirect_topmost_client):
	Centralise unredirecting here.
	(hd_comp_mgr_map_notify): Unredirect new non-composited clients when
	we are in the non-composited mode.

	Release 2.2.96

	* src/home/hd-render-manager.c (hd_render_manager_set_state): Check
	that the client selected for unredirection is fullscreen. This avoids
	selecting e.g. the tklock window for unredirection...
	Fixes: NB#135542 - Browser in full screen mode displays only blank
	screen after going out from idle state

2009-08-27  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.95

2009-08-27  Gordon Williams <gordon.williams@collabora.co.uk>
