@@ -1,3 +1,13 @@
+2009-09-02  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	Fix a memory leak. Related to NB#98132 and NB#134230
+
+	* src/mb/hd-theme.c (back_button_press_handler): Do not reference the
+	button here, it's already done earlier.
+	(construct_buttons): Reference the button (also in the latter part of
+	the code) when press and release handlers are installed.
+	(back_button_release_handler): Unreference the button to destroy it.
+
 2009-09-01  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	Release 2.2.99
